# Aibos-GitRepo-Search

./: .gitignore  README.md  build.sh  env.example  index.html  package-lock.json  package.json  render.yaml  vercel.json
api/: index.py
backend/: .env.example  config.py  database.py  main.py  pyproject.toml  render.yaml  requirements.txt  scheduler.db  security.py
backend/models/: local_user.py  repository.py  repositoryownwer.py  searchparams.py  searchrequest.py  searchresponse.py  user.py
backend/routers/: api.py  auth.py  local_auth.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_main.py
frontend/: .gitignore  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  render.yaml  vite.config.js  vitest.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: About.jsx  Analytics.jsx  AnalyticsSidebar.jsx  AuthCallback.jsx  ConfirmModal.jsx  Dashboard.jsx  EmptyState.jsx  ErrorAlert.jsx  Features.jsx  Footer.jsx  Hero.jsx  LoadingSpinner.jsx  Login.jsx  LoginPage.jsx  Pagination.jsx  ProtectedRoute.jsx  QuickActions.jsx  RepoCard.jsx  SavedRepoCard.jsx  SavedRepos.jsx  SearchBar.jsx  SearchFilter.jsx  Signup.jsx  ThemeToggle.jsx  navbar.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: usePageTitle.js
frontend/src/test/: setup.js
frontend/src/test/components/: AuthCallback.test.jsx  LoadingSpinner.test.jsx  Pagination.test.jsx  RepoCard.test.jsx  (+2 more)
frontend/src/types/: Repository.js  SearchFilters.js  SearchResponse.js  User.js
src/: App.jsx
